--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="lib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
+    <script src="lib/openfb/openfb-angular.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <!-- Important to include gmaps api the following way because iOS sim cannot download it from the CDN -->
     <script type="text/javascript">
