--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <script src="lib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
-    <script src="lib/openfb/openfb-angular.js"></script>
+
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <!-- Important to include gmaps api the following way because iOS sim cannot download it from the CDN -->
     <script type="text/javascript">
@@ -44,5 +44,10 @@
   </head>
   <body ng-app="your_app_name">
     <ion-nav-view></ion-nav-view>
+
+    <div id="fb-root"></div>
+
+    <!-- Need to place at the end to prevent appendChild error -->
+    <script src="lib/facebook/facebookConnectPlugin.js"></script>
   </body>
 </html>
